-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2011-10-05	jluis
	* grdpaste.c:		Now works also with pixel registered grids with both cases of
				an actual repeated row or column (one ell overlap) or when both
				-R share a common edge. Added two tests under test/grdpaste 
				to test this new features.

2011-10-01	remko
	* xyz2grd.c:		Only request 2 columns when using -An.

2011-09-30	fwobbe
	* common_options.txt:	Added missing '[' in GMT_i_OPT.
	* gmt_init.c:		Code cleanup. Fixed issue with content aware src
			  	editors. Moved definitions to top. Fixed GMT_MSG_FATAL report and
				verbosity level during init.

2011-09-27	remko
	* gmt_colors.h:		Missing () in GMT_s255 macro caused possibly wrong results.
	* gmt2kml.c:		Color indices had int() instead of rint().
	* test/psxy/gaps.sh:	Make reference gaps.nc in advance.
	* test/x2sys/x2sys_5.sh:Reduce decimals to 2 to avoid rounding differences.

2011-09-23	fwobbe
	* gmtswitch:		Allow comments in ~/.gmtversions
	* configure.ac, gmt_version.h.in, gmt_version.c, GNUmakefile:	Set
				svnversion in configure.ac. Fallback solution if tree
				was exported from svn and does not contain metadata.

2011-09-23	jluis
	* pslib.c:		PSL_free_nonmacro was actually not freeing any memory.

2011-09-23	pwessel
	* gmt_init.c:		Fixed memory leaks pointed out by Florian Wobbe.

2011-09-23	remko
	* project.c(oblique_setup):	Return clat,clon in only when !c_given.

2011-09-23	fwobbe
	* pslib.c, gmt_plot.c, grdimage.c:	Fixed a memory leak in GMT_export2proj4

2011-09-23	jluis
	* grd2xyz.c:		Make -S option work in GMT_COMPAT mode.

2011-09-22	remko
	* psclip.c, pscoast.c, grdcontour.c:	Changed order GMT_plotcanvas and
				GMT_plane_perspective.
	* gmt_plot.c:		Added a new way to determine the edges of a plot when circular.

2011-09-21	pwessel
	* pstext.txt:		Removed old -S from examples
