@@ -2,10 +2,14 @@
 	$Id$
 -----------------------------------------------------------------------------------------
 
+2011-10-05	fwobbe
+	* src/{gmt_init.c,gmt_esri_io.c,spotter/originator.c,gmt_support.c}:
+				Fixed bugs, uninitialized values and wrong casts.
+
 2011-10-05	jluis
 	* grdpaste.c:		Now works also with pixel registered grids with both cases of
 				an actual repeated row or column (one ell overlap) or when both
-				-R share a common edge. Added two tests under test/grdpaste 
+				-R share a common edge. Added two tests under test/grdpaste
 				to test this new features.
 
 2011-10-01	remko
